# zfpgatester

./: CMakeLists.txt  cmdhandlerzfpgatest.cpp  cmdparserzfpgatest.cpp  cmdparserzfpgatest.h  filehandler.cpp  filehandler.h  globals.h  main.cpp  timer.cpp  timer.h  zfpgatester.pro
.github/workflows/: buildAndTest.yml  triggerMetaUpdates.yml
src/: CMakeLists.txt  cmdhandlerzfpgatest.cpp  cmdhandlerzfpgatest.h  cmdparserzfpgatest.cpp  cmdparserzfpgatest.h  dataformatting.cpp  dataformatting.h  filehandler.cpp  filehandler.h  filewrapper.cpp  filewrapper.h  globals.h  main.cpp  textfilehandler.cpp  textfilehandler.h  timer.cpp  timer.h
test/: CMakeLists.txt  unittest_filehandler.cpp
test/gtest/: CMakeLists.txt  unittest_filewrapper.cpp
test/qtest/: CMakeLists.txt  unittest_cmdhandlerzfpgatest.cpp  unittest_cmdhandlerzfpgatest.h  unittest_dataformatting.cpp  unittest_dataformatting.h
